# agent-council

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  _config.yml  apm.yml  council.yaml.example  index.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
commands/: council-review.md  council-sweep.md
docs/: architecture.md  demo.md  mcp.md
examples/: life_goals.example.md  persona_dna.example.json  voice_recipe.example.md
examples/demo/: README.md  sample_linkedin_post.md  sample_revision_brief.md  sample_verdict.json
mcp/: README.md  agent_council_mcp_server.py
prompts/: adjudicator.md  evidence.md  skeptic.md  strategy.md  voice_identity.md
skills/adjudicator-synthesis/: SKILL.md
skills/evidence-calibration-review/: SKILL.md
skills/skeptic-review/: SKILL.md
skills/strategy-stakes-review/: SKILL.md
skills/voice-identity-review/: SKILL.md
src/agent_council/: __init__.py  __main__.py  audit.py  cli.py  config.py  log.py  orchestrator.py  schema.py  sweep.py  tier.py  verdict.py
src/agent_council/bench/: __init__.py  cli.py  judge.py  results_writer.py  runner.py  task_brief.py
src/agent_council/runtimes/: __init__.py  base.py  claude_cli.py  gh_models.py  lmstudio.py  mock_cli.py  ollama.py
tests/: council.example.yaml  sample_artifact.md  test_audit.py  test_lmstudio_adapter.py  test_modularity_invariant.py  test_ollama_adapter.py  test_orchestrator.py  test_prior_verdicts.py  test_schema.py  test_schema_enforcement.py  test_verdict_merge.py
(+4 files in other folders)
